<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".ActivityStart">
    <item
        android:id="@+id/info"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/home_top"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/text_home" />
    <item
        android:id="@+id/browse_top"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:title="@string/text_browse" />
    <item
        android:id="@+id/favourites_top"
        android:orderInCategory="102"
        app:showAsAction="never"
        android:title="@string/text_favorite" />
</menu>