<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp">

        <!--ROW About Application-->
        <TableRow
            android:background="#607D8B"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_application"
                android:textAlignment="center"/>
        </TableRow>

        <!--ROW About Page-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_page"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_text"/>
        </TableRow>

        <!--ROW Home Page-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_page"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_text"/>
        </TableRow>

        <!--ROW Browse Page-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/browse_page"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/browse_text"/>
        </TableRow>

        <!--ROW Favourite Page-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/favourite_page"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/favourite_text"/>
        </TableRow>

        <!--ROW Browse List-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/browse_list"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/browse_list_text"/>
        </TableRow>

        <!--ROW Like Button-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/like_button"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/like_button_text"/>
        </TableRow>

        <!--ROW Dislike Button-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dislike_button"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dislike_button_text"/>
        </TableRow>

        <!--ROW Top and Bottom Menu-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECEFF1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_button"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/menu_button_text"/>
        </TableRow>
    </TableLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_favourite"/>

</RelativeLayout>