<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_height="match_parent"
      android:layout_width="match_parent">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_browse"
        android:enabled="true"
        android:icon="@drawable/ic_browse_black_24dp"
        android:title="@string/text_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_location"
        android:enabled="true"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="ifRoom"/>
</menu>